# TreePickupOptimizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  addresses.csv  main.py  pyproject.toml  scratch_paper.txt  tree-pickup-results-20251231-011936-1teams-1addrs.txt  tree-pickup-results-20251231-011936-2teams-2addrs.txt  tree-pickup-results-20251231-011936-2teams-3addrs.txt  tree-pickup-results-20251231-012008-1teams-1addrs.txt  tree-pickup-results-20251231-012008-2teams-2addrs.txt  tree-pickup-results-20251231-012008-2teams-3addrs.txt  tree-pickup-results-20251231-012038-1teams-1addrs.txt  tree-pickup-results-20251231-012038-2teams-2addrs.txt  tree-pickup-results-20251231-012038-2teams-3addrs.txt  tree-pickup-results-20251231-012722-1teams-1addrs.txt  tree-pickup-results-20251231-012722-2teams-2addrs.txt  tree-pickup-results-20251231-012722-2teams-3addrs.txt  tree-pickup-results-20251231-012743-1teams-1addrs.txt  tree-pickup-results-20251231-012743-2teams-2addrs.txt  tree-pickup-results-20251231-012743-2teams-3addrs.txt  tree-pickup-results-20251231-013041-20teams-80addrs.txt  tree-pickup-results-20251231-013723-1teams-1addrs.txt  tree-pickup-results-20251231-013723-2teams-2addrs.txt  tree-pickup-results-20251231-013723-2teams-3addrs.txt  tree-pickup-results-20251231-013750-20teams-80addrs.txt  tree-pickup-results-20251231-013958-20teams-83addrs.txt
docs/: DEVELOPMENT.md  SETUP.md  USER_GUIDE.md
tests/: conftest.py  test_cli.py  test_clusterer.py  test_csv_parser.py  test_distance.py  test_file_exporter.py  test_geocoder.py  test_mst.py  test_team_generator.py  (+2 more)
(+17 files in other folders)
