[project]
name = "tree-pickup"
version = "0.1.0"
description = "Zero-cost tree pickup assignment using K-Means clustering and free geocoding"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
    "geopy>=2.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1",
]

[project.scripts]
tree-pickup = "tree_pickup.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
